<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name = "employee"
            type = "com.example.jetpacksample.architecture.databinding.model.Employee" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        tools:context=".architecture.databinding.AddEmployeeActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_employee"
            android:textSize="16dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/emplyeeNameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_employee_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/emplyeeDeptEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_department"
            android:inputType="text" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:text="@string/add"/>

        <FrameLayout
            android:id="@+id/fragmentEmployeeAdded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" />

    </LinearLayout>
</layout>